fix(JumpLinks): use JumpLinks component on Org (#2473)
* added code-editor to source file

* fixed merge conflict from upstream

* start converting to JumpLinks, active styling is off and margins aren't collapsing, focus doesn't shift on Enter

* added tabIndex, working on first item border

* cleaned up custom styling

* bumped react-docs for canUseDOM

* bump react-docs

* bumped react-docs to pull in fixed JumpLinks component

--- a/packages/theme-patternfly-org/components/tableOfContents/tableOfContents.css
+++ b/packages/theme-patternfly-org/components/tableOfContents/tableOfContents.css
@@ -30,47 +30,24 @@
   margin-top: var(--pf-global--spacer--sm);
 }
 
-.ws-toc-list::before,
-.ws-toc-link--current::after {
-  content: "";
-  position: absolute;
-  left: 0;
-  top: 0;
-  bottom: 0;
-} 
-
-.ws-toc-list::before {
-  left: 1px;
-  width: var(--pf-global--BorderWidth--sm);
-  background-color: var(--pf-global--BorderColor--100);
+.ws-toc-list .pf-c-jump-links__list {
+  padding-top: 0;
+  padding-bottom: 0;
 }
 
-.ws-toc-link {
+/* .ws-toc-link { */
+.ws-toc-item .pf-c-jump-links__link {
   position: relative;
   display: block;
   color: var(--ws-toc-link--Color, var(--pf-global--Color--300));
   font-size: var(--pf-global--FontSize--sm);
-  /* not sure if you need this? */
-  /*
-  padding-top: var(--pf-global--spacer--xs);
-  padding-bottom: var(--pf-global--spacer--xs);
-  */
-  padding-left: var(--ws-toc-link--PaddingLeft, var(--pf-global--spacer--md));
-  margin: var(--pf-global--spacer--sm) 0;
+  margin: -4px 0;
 }
 
-.ws-toc-link--current::after {
-  width: var(--pf-global--BorderWidth--md);
-  background-color: var(--ws-toc-link--Color);
+.ws-toc-sublist > .ws-toc-item:first-child .pf-c-jump-links__link {
+  margin-top: 0;
 }
 
-.ws-toc-link.ws-toc-link--current,
-.ws-toc-link:hover {
-  text-decoration: none;
-  --ws-toc-link--Color: var(--pf-global--primary-color--100);
-}
-
-.ws-toc-sublist {
-  --ws-toc-link--Color: var(--pf-global--Color--200);
-  --ws-toc-link--PaddingLeft: var(--pf-global--spacer--lg);
+.ws-toc-item.pf-m-current .pf-c-jump-links__link::before {
+  z-index: 1;
 }
